// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DatePicker computed usecase-0__disabled-false caretSize 1`] = `"12px"`;

exports[`DatePicker computed usecase-0__disabled-false formattedDate 1`] = `"2018-01-10T00:00:00+00:00"`;

exports[`DatePicker computed usecase-0__disabled-false isEmpty 1`] = `false`;

exports[`DatePicker computed usecase-0__disabled-false states 1`] = `
Object {
  "disabled": false,
  "error": undefined,
  "valid": undefined,
}
`;

exports[`DatePicker computed usecase-0__disabled-true caretSize 1`] = `"12px"`;

exports[`DatePicker computed usecase-0__disabled-true formattedDate 1`] = `"2018-01-10T00:00:00+00:00"`;

exports[`DatePicker computed usecase-0__disabled-true isEmpty 1`] = `false`;

exports[`DatePicker computed usecase-0__disabled-true states 1`] = `
Object {
  "disabled": true,
  "error": undefined,
  "valid": undefined,
}
`;

exports[`DatePicker computed usecase-1__disabled-false caretSize 1`] = `"12px"`;

exports[`DatePicker computed usecase-1__disabled-false formattedDate 1`] = `"2018-01-10T00:00:00+00:00"`;

exports[`DatePicker computed usecase-1__disabled-false isEmpty 1`] = `false`;

exports[`DatePicker computed usecase-1__disabled-false states 1`] = `
Object {
  "disabled": false,
  "error": "Something went wrong",
  "valid": undefined,
}
`;

exports[`DatePicker computed usecase-1__disabled-true caretSize 1`] = `"12px"`;

exports[`DatePicker computed usecase-1__disabled-true formattedDate 1`] = `"2018-01-10T00:00:00+00:00"`;

exports[`DatePicker computed usecase-1__disabled-true isEmpty 1`] = `false`;

exports[`DatePicker computed usecase-1__disabled-true states 1`] = `
Object {
  "disabled": true,
  "error": "Something went wrong",
  "valid": undefined,
}
`;
